# pulpie

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  bench_pulpie_gpu_compile.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
data/: add_embeddings.py  analyze_errors.py  audit_labels_llm.py  bench_gpu_local.py  block_chunker.py  cc_relabel_urls.json  doublecheck_with_dripper.py  estimate_label_noise.py  filter_and_audit_cc.py  generate_cc_training_data.py  generate_teacher_logits.py  generate_training_data.py  generate_training_data_dom.py  label_cc.py  optimize_llm_prompt.py  prototype_crf.py  prototype_crf_v2.py  prototype_text_classifier.py  relabel_noisy.py  relabel_truncated.py  run_label.sh  sample_cc.py  selected_features.json  test_ensemble.py  test_llm_classifier.py  test_llm_classifier_v2.py  train_bio_classifier.py  train_combined.py  train_distill_eurobert.py  train_eurobert_classifier.py  train_final.py  train_gbm.py  train_potion_classifier.py  train_test_split.py  tune_gbm.py
docs/: blog_dirty_context.md  encoder_classifier.md  error_analysis.md
eval/: README.md  analyze_failures.py  bench_all_methods.py  bench_pulpie_a100.py  bench_pulpie_gpu_only.py  bench_qwen_classify.py  bench_qwen_classify_results.json  bench_rouge.py  bench_rouge_h2t.py  bench_rouge_h2t_results.json  bench_rouge_results.json  compare_formatting.py  diagnose_rouge.py  error_analysis.py  error_analysis_results.json  eval_all_methods_200.py  eval_dripper_native.py  eval_latte_large_vs_dripper.py  eval_qrater_clean_rate.py  eval_qrater_dripper.py  eval_sample50.py  eval_sample50_results.json  inspect_empty_pages.py  inspect_eval_pages.py  manifest.json  qrater_scores.json  score_qrater.py  test_deepseek_pipeline.py  test_empty_pages.py  test_strip_tail.py
eval/html/: 01_article_pg.html  02_nodejs_dev.html  03_numberanalytics_com.html  04_evisional_com.html  06_cobra_dev.html  07_how2_sh.html  08_u11d_com.html  09_istio_io.html  10_immunologyexplained_aai_org.html  11_tutorialspoint_com.html  12_builtin_com.html  13_omnipod_com.html
eval/output/: 01_article_pg.md  02_nodejs_dev.md  03_numberanalytics_com.md  04_evisional_com.md  05_protobuf_dev.md  06_cobra_dev.md  08_u11d_com.md  09_istio_io.md  11_tutorialspoint_com.md  12_builtin_com.md  13_omnipod_com.md
eval/reference/: 02_nodejs_dev.txt  03_numberanalytics_com.txt  04_evisional_com.txt  05_protobuf_dev.txt  06_cobra_dev.txt  07_how2_sh.txt  08_u11d_com.txt  09_istio_io.txt  12_builtin_com.txt  (+3 more)
legacy/: Cargo.toml
legacy/src/: classify.rs  clean.rs  error.rs  gbm.rs  lib.rs  segment.rs
pulpie/: README.md  pyproject.toml
pulpie/src/pulpie/: __init__.py  model_utils.py  pipeline.py  reconstruct.py  simplify.py
scripts/: infer.py  postprocess.py  preprocess.py  run_all.sh  run_bucket.py
src/: classify.rs  clean.rs  gbm.rs  markdown.rs  postprocess.rs  segment.rs
tests/: conftest.py  test_simplify_parity.py
(+12 files in other folders)
